# -observation

./: README.md  inst_tx.json  mint_try.sh
flora_observation/: Cargo.toml  build_optimized.sh  msg.json  write_contract.sh
flora_observation/artifacts/: Participation_Certificate_NFT.wasm  checksums.txt  flora_observation.wasm  participation_certificate_nft.wasm
flora_observation/deploy/: deploy_dual.sh  vars.env
flora_observation/deploy/instances/: ticket.json
flora_observation/src/: error.rs  lib.rs  msg.rs  state.rs
my-app/: Dockerfile  docker-compose.yml  index.html  nohup.out  package-lock.json  package.json
my-app/src/: App.jsx  FaucetPage.jsx  IPFSListPage.jsx  IPFSUploadAndMintPage.jsx  IPFSUploadForm.jsx  MintNFTPage.jsx  PageList.jsx  QrReaderPage.jsx  QrReaderPage_with_contract.jsx  SubmitForm.jsx  WalletGenerator.tsx  eQRpaper_snap.jsx  fetchContractTxs.jsx  index.css
public_mint/: Cargo.toml  Cargo.toml.bak  PT_write_contract.sh  deploy_and_mint.sh  metadata.json  mint_try.sh
public_mint/artifacts/: checksums.txt  cw721_public_mint.wasm
public_mint/src/: error.rs  lib.rs  msg.rs  state.rs
s_mint/deploy/instances/: obs.json
s_mint/src/: error.rs  state.rs
