[package]
name = "flora-observation"
version = "0.2.1"           # 任意。0.2.0のままでも可
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# #[cfg(not(feature = "library"))] の警告抑止
library = []

[dependencies]
cosmwasm-std = "=1.5.4"
cosmwasm-schema = "=1.5.4"
cw-storage-plus = "=1.2.0"
thiserror = "=1.0.64"
schemars = "=0.8.21"
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"     # ★ これが必須！

[dev-dependencies]
cosmwasm-std = { version = "1.5.4", features = ["staking"] }
