[package]
name = "participation-certificate-nft"
version = "0.1.0"
edition = "2021"
resolver = "2"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# 追加 feature が必要ならここに記載

[dependencies]
cosmwasm-schema  = "1.5"
cosmwasm-std     = "1.5"
# ← ここが肝: Item/Map は cw_storage_plus から
cw-storage-plus  = "1.2"
schemars         = "0.8"
serde            = { version = "1.0", features = ["derive"] }
thiserror        = "1.0"

cw2              = "1.1.2"
cw721            = "0.18.0"
cw721-base       = { version = "0.18.0", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = "1.5"
